# mik

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  bench-lb.sh  clippy.toml  codecov.yml  deny.toml  install.ps1  install.sh  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
benches/: http_latency.rs  module_loading.rs  runtime_bench.rs  runtime_benchmarks.rs  throughput.rs
benchmarks/: data.js
src/: lib.rs  (+7 more)
tests/fixtures/wasm-fixtures/: .gitignore  Cargo.toml  build.ps1  build.sh
tests/fixtures/wasm-fixtures/echo/: Cargo.toml
tests/fixtures/wasm-fixtures/echo/src/: lib.rs
tests/fixtures/wasm-fixtures/echo/wit/: world.wit
tests/fixtures/wasm-fixtures/fuel_burner/: Cargo.toml
tests/fixtures/wasm-fixtures/fuel_burner/src/: lib.rs
tests/fixtures/wasm-fixtures/fuel_burner/wit/: world.wit
tests/fixtures/wasm-fixtures/infinite_loop/: Cargo.toml
tests/fixtures/wasm-fixtures/infinite_loop/src/: lib.rs
tests/fixtures/wasm-fixtures/infinite_loop/wit/: world.wit
tests/fixtures/wasm-fixtures/memory_hog/: Cargo.toml
tests/fixtures/wasm-fixtures/memory_hog/src/: lib.rs
tests/fixtures/wasm-fixtures/memory_hog/wit/: world.wit
tests/fixtures/wasm-fixtures/oversized_response/: Cargo.toml
tests/fixtures/wasm-fixtures/oversized_response/src/: lib.rs
tests/fixtures/wasm-fixtures/oversized_response/wit/: world.wit
tests/fixtures/wasm-fixtures/panic/: Cargo.toml
tests/fixtures/wasm-fixtures/panic/src/: lib.rs
tests/fixtures/wasm-fixtures/panic/wit/: world.wit
tests/fixtures/wasm-fixtures/slow_response/: Cargo.toml
tests/fixtures/wasm-fixtures/slow_response/src/: lib.rs
tests/fixtures/wasm-fixtures/slow_response/wit/: world.wit
tools/bench/: Cargo.toml
tools/bench/src/: main.rs
(+284 files in other folders)
